feat: Major upgrade - EfficientNet-B0 backbone + face detection + 18% accuracy boost
- Replace ResNet18 with EfficientNet-B0 (1280-dim features)
- Add face detection pipeline to eliminate background bias
- Implement Phase 1 dataset optimizations (3-5x faster training)
- Improve test accuracy from 71% to 90%
- Add pixelated artifact heatmaps for visualization
- Balance real/fake detection (93% real recall, 86% fake recall)

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,39 @@
-__pycache__/
-*.pyc
-*.pkl
-*.pt
+# Large data folders
 data/
 checkpoints/
-*.npy
-*.mp4
+models/
+gradcam_videos/
+
+# Model files
+*.pth
+*.pt
+*.ckpt
+
+# Virtual environments
 train_env/
-mediapipe_env/
 gradio_env/
+mediapipe_env/
+venv/
+env/
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+train/__pycache__/
+
+# Output files
+*.mp4
+diagnostic_*.mp4
+*.avi
+
+# IDE
+.vscode/
+.idea/
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Logs
+*.log
