--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.pth filter=lfs diff=lfs merge=lfs -text
+static/samples/*.mp4 filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
